# d2d

./: CHANGES.md
d2d/: Makefile  doc2dict.md  html2instructions.py  pyproject.toml  readme.md  setup.py
d2d/d2d/: __init__.py  lexbor.c  lexbor.pxd
d2d/d2d/lexbor/: node.pxi
selectolax/lexbor/: node.pxi
tests/: test_lexbor_fragment.py
