[build-system]
requires = [
    "wheel",
    "Cython",
    "setuptools>=62.4",
]

[project]
name = 'd2d'
version = '0.0.1'
description = 'doc2dict rewrite'
requires-python = '>=3.9,<3.15'
license = 'MIT'
dependencies = []

[tool.cibuildwheel]
build-frontend = "build"
build-verbosity = 1

[tool.cibuildwheel.linux]
environment = { LDFLAGS = "-Wl,--strip-debug" }

skip = [
    "*-manylinux_i686",
    "*-musllinux_i686",
    "*-win32*",
    "pp*"
]
test-skip = "*-macosx_arm64"

[project.optional-dependencies]
cython = [
    "Cython",
]

[tool.cython-lint]
max-line-length = 120
ignore = ['E221', 'E222', ]
